--- a/cooking-pad/index.html
+++ b/cooking-pad/index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cooking_pad</title>
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cooking_pad</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="search-container">
+        <input
+          type="text"
+          placeholder="Type A Dish Name Here.."
+          id="user-inp"
         />
-        <link rel="stylesheet" href="/index.css" />
-    </head>
-    <body>
-        <div class="mobile-container">
-            <header>
-                <input type="text" id="search-term" />
-                <button id="search"><i class="fas fa-search"></i></button>
-            </header>
-            <div class="fav-container">
-                <h3>Cooking_pad</h3>
-                <ul class="fav-meals" id="fav-meals"></ul>
-            </div>
-            <div class="meals" id="meals"></div>
-        </div>
-
-        <div class="popup-container hidden" id="meal-popup">
-            <div class="popup">
-                <button id="close-popup" class="close-popup">
-                    <i class="fas fa-times"></i>
-                </button>
-                <div class="meal-info" id="meal-info"></div>
-            </div>
-        </div>
-    </body>
-    <script src="/index.js"></script>
+        <button id="search-btn">Search</button>
+      </div>
+      <div id="result"></div>
+    </div>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
