--- a/cooking-pad/index.html
+++ b/cooking-pad/index.html
@@ -24,6 +24,6 @@
       <div id="result"></div>
     </div>
     <!-- Script -->
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
