--- a/cooking-pad/index.html
+++ b/cooking-pad/index.html
@@ -12,7 +12,7 @@
   <div class = "container">
     <div class = "meal-wrapper">
       <div class = "meal-search">
-        <h2 class = "title">Find Meals For Your Ingredients</h2>
+<!--         <h2 class = "title">Find Meals For Your Ingredients</h2> -->
 <!--         <blockquote>Real food doesn't have ingredients, real food is ingredients.<br>
           <cite>- Jamie Oliver</cite>
         </blockquote> -->
